<resources>
    <string name="app_name">Planner</string>
    <string name="title_activity_welcome_">Welcome_Activity</string>

    <string name="title_activity_events">EventsActivity</string>

    <string name="add_notes">Add Notes</string>
    <string name="note_title">Note Title</string>
    <string name="title_activity_login2">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="reset">Reset</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="welcome">Welcome </string>

</resources>
